--- a/app_festa/templates/festa_home/detail.html
+++ b/app_festa/templates/festa_home/detail.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,23 +18,15 @@
     crossorigin="anonymous"></script>
 
 </head>
-
 <body>
     <div class="container">
-        <p> 새글 등록하기</p>
+        <h1>공연 이름 :{{ festa.name }}</h1>
+        <p>공연 날짜 : {{ festa.schedule }}</p>
+        <p>공연 장소 : {{ festa.space }}</p>
+        <img src="{{ festa.image.url }}">
         <br>
-        <div class="container">
-            <form action="{% url 'create' %}" method="POST" enctype="multipart/form-data">
-                {% csrf_token %}
-                <h4>공연 이름: <input type="text" name="name"></h4>
-                <br>
-                <h4>장소: <input type="text" name="space"></h4>
-                <br>
-                <p>대표 이미지: <input type="file" name="image" vlaue="찾아보기"></p>
-                <input class="btn btn-dark" type="submit" value="제출하기">
-            </form>
-        </div>
+        <a href="{% url 'home' %}">목록 보러가기</a>
     </div>
+    
 </body>
-
 </html>
