--- a/app_festa/templates/festa_home/new.html
+++ b/app_festa/templates/festa_home/new.html
@@ -1,26 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-
+{% extends 'base.html' %}
+<!-- 
+[base.html]
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-
 </head>
 
 <body>
+ -->
+ {% block content %}
     <div class="container">
         <p> 새글 등록하기</p>
         <br>
@@ -29,6 +15,7 @@
                 {% csrf_token %}
                 <h4>공연 이름: <input type="text" name="name"></h4>
                 <br>
+                <h4>공연 날짜: <input type="date" name="schedule"></h4>
                 <h4>장소: <input type="text" name="space"></h4>
                 <br>
                 <p>대표 이미지: <input type="file" name="image" vlaue="찾아보기"></p>
@@ -37,5 +24,4 @@
         </div>
     </div>
 </body>
-
-</html>
+{% endblock %}
