--- a/app_festa/templates/festa_home/new.html
+++ b/app_festa/templates/festa_home/new.html
@@ -18,6 +18,7 @@
                 <h4>공연 날짜: <input type="date" name="schedule"></h4>
                 <h4>장소: <input type="text" name="space"></h4>
                 <br>
+                <p>공연 상세정보: <textarea name="info" cols=70 rows=10></textarea></p>
                 <p>대표 이미지: <input type="file" name="image" vlaue="찾아보기"></p>
                 <input class="btn btn-dark" type="submit" value="제출하기">
             </form>
