--- a/app_festa/templates/festa_home/new.html
+++ b/app_festa/templates/festa_home/new.html
@@ -8,18 +8,29 @@
  -->
  {% block content %}
     <div class="container">
-        <p> 새글 등록하기</p>
+        <h2>페스타 등록하기</h2>
         <br>
         <div class="container">
             <form action="{% url 'create' %}" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
-                <h4>공연 이름: <input type="text" name="name"></h4>
+                <h4>공연 제목</h4>
+                <input type="text" name="name">
+                <h4>공연 날짜</h4>
+                <input type="date" name="schedule">
+                <h4>공연 장소</h4>
+                <input type="text" name="space">
+                <h4>공식 티켓판매처 링크</h4>
+                <input type="text" name="purchase_link">
+                <h4>공연 주최/기획사</h4>
+                <input type="text" name="host">
+                <!-- <h4>고객 문의처: <input type="text" name="contact"></h4> -->
+                <p>유의사항</p>
+                <textarea name="precautions" cols=70 rows=10></textarea>
+                <p>공지사항</p>
+                <textarea name="notice" cols=70 rows=10></textarea>
                 <br>
-                <h4>공연 날짜: <input type="date" name="schedule"></h4>
-                <h4>장소: <input type="text" name="space"></h4>
-                <br>
-                <p>공연 상세정보: <textarea name="info" cols=70 rows=10></textarea></p>
-                <p>대표 이미지: <input type="file" name="image" vlaue="찾아보기"></p>
+                <p>이미지 첨부</p>
+                <input type="file" name="poster" vlaue="찾아보기">
                 <input class="btn btn-dark" type="submit" value="제출하기">
             </form>
         </div>
