--- a/app_festa/templates/festa_home/new.html
+++ b/app_festa/templates/festa_home/new.html
@@ -26,12 +26,12 @@
                 <p>고객 문의처</p>
                 <input type="text" name="contact">
                 <!-- <h4>지도</h4> -->
-                <p>유의사항</p>
+                <p>유의사항 게시글로 작성됩니다</p>
                 <textarea name="precautions" cols=70 rows=10></textarea>
-                <p>공지사항</p>
+                <p>공지사항 게시글로 작성됩니다</p>
                 <textarea name="notice" cols=70 rows=10></textarea>
                 <br>
-                <p>이미지 첨부</p>
+                <p>이미지 첨부 이미지 내 공연 쇅, 공연 출연진, 타임 테이블 정보 필수</p>
                 <input type="file" name="poster" vlaue="찾아보기">
                 <input class="btn btn-dark" type="submit" value="제출하기">
             </form>
