--- a/app_festa/templates/festa_home/success_create.html
+++ b/app_festa/templates/festa_home/success_create.html
@@ -12,7 +12,10 @@
         <br>
         <div class="container">
             그림 넣고~
+            <h3>등록이 완료되었습니다.</h3>
+            <p>승인 완료까지 약 3일이 소요됩니다.</p>
             <br>
+            <p>등록 코드:</p>
             <a href="{% url 'home' %}">홈으로</a>
         </div>
     </div>
