--- a/app_festa/templates/festa_now/detail.html
+++ b/app_festa/templates/festa_now/detail.html
@@ -12,8 +12,12 @@
         <h1>공연 이름 :{{ festa.name }}</h1>
         <p>공연 날짜 : {{ festa.schedule|date:"Y"}}년 {{ festa.schedule|date:"m"}}월 {{ festa.schedule|date:"d"}}일</p>
         <p>공연 장소 : {{ festa.space }}</p>
-        <p>공연 상세정보 : {{ festa.info }}</p>
-        <img src="{{ festa.image.url }}">
+        <p>공식 티켓판매처 링크 : {{festa.purchase_link}}</p>
+        <p>공연 주최/기획사 : {{festa.hodt }}</p>
+        <p>고객 문의처 : {{festa.contact }}</p>
+        <p>공연 유의사항 : {{ festa.precautions }}</p>
+        <p>공연 공지사항 : {{ festa.notice }}</p>
+        <img src="{{ festa.poster.url }}">
         <br>
         <a href="{% url 'home' %}">목록 보러가기</a>
         <a href="{% url 'edit' festa.id %}">수정하기</a>
