--- a/project_festa/templates/base.html
+++ b/project_festa/templates/base.html
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                 </li> -->
                 <li class="nav-item">
-                    <a class="nav-link" href="#">등록 확인</a>
+                    <a class="nav-link" href="{% url 'confirm_login' %}">등록 확인</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'new' %}">페스타 등록하기</a>
