등록번호 생성

--- a/app_festa/templates/festa_home/new.html
+++ b/app_festa/templates/festa_home/new.html
@@ -39,7 +39,7 @@
                 <p>공지사항 게시글로 작성됩니다</p>
                 <textarea name="notice" cols=70 rows=10></textarea>
                 <br>
-                <p>이미지 첨부 이미지 내 공연 쇅, 공연 출연진, 타임 테이블 정보 필수</p>
+                <p>이미지 첨부 이미지 내 공연 소개, 공연 출연진, 타임 테이블 정보 필수</p>
                 <input type="file" name="poster" vlaue="찾아보기">
                 <input class="btn btn-dark" type="submit" value="제출하기">
             </form>
