--- a/app_festa/templates/festa_now/audience/audience.html
+++ b/app_festa/templates/festa_now/audience/audience.html
@@ -21,7 +21,7 @@
                 
                 <li><a href="">찾아가라</a></li>
 
-                <li><a href="">집가자</a></li>
+                <li><a href="{% url 'audience_home' %}">집가자</a></li>
 
                 </ul>
 
