--- a/app_festa/templates/festa_now/staff/staff.html
+++ b/app_festa/templates/festa_now/staff/staff.html
@@ -13,15 +13,15 @@
             <img src = http://www.kpenews.com/Files/4/News/201906/260_20190620191955168.JPG style="height:500px">
             <ul class="vertical-menu">
 
-                <li><a href="">공지사항</a></li>
+                <li><a href="{% url 'now_staff' %}">공지사항</a></li>
                 
-                <li><a href="">팀별 게시판</a></li>
+                <li><a href="{% url 'now_team' %}">팀별 게시판</a></li>
                 
                 <li><a href="">지도</a></li>
                 
                 <li><a href="">찾아가라</a></li>
 
-                <li><a href="">집가자</a></li>
+                <li><a href="{% url 'staff_home' %}">집가자</a></li>
 
                 </ul>
 
