--- a/app_festa/templates/festa_now/new_home.html
+++ b/app_festa/templates/festa_now/new_home.html
@@ -11,10 +11,10 @@
 <body>
 <center>
     <h1>새 글을 작성해주세요</h1>
-    <a href="{% url 'now_now' %}" class="store">Festa now</a>
+    <input type="button" value="뒤로가기" onclick="history.back(-1);">
     <br>
     <br>
-    <form action="{%url 'create_now' %}" method="POST">
+    <form action="{%url 'create_home' %}" method="POST">
         {% csrf_token %}
         [Title] : <input type="text" name='title'>
         <br>
@@ -22,12 +22,13 @@
         [Writer] : <input type="text" name='writer'>
         <br>
         <br>
+        [Region] : <input type="text" name='region'>
+        <br>
+        <br>
         [Body]
         <br>
         <textarea name="body" id="" cols="30" rows="10" placeholder="write your content" style="padding:10px; margin:10px;"></textarea>
         <br>
-        <br>
-        [password] : <input type="password" name="password" placeholder="비밀번호를 입력하세요">
         
         <button type='submit'>작성하기</button>
     </form>
