--- a/app_festa/templates/festa_now/staff/edit_team.html
+++ b/app_festa/templates/festa_now/staff/edit_team.html
@@ -11,18 +11,18 @@
 <body>
 <center>
         <h1>글을 수정중입니다.</h1>
-        <form action="{% url 'update' blog.id %}" method="POST">
+        <form action="{% url 'update_team' team.id %}" method="POST">
                 {% csrf_token %}
-                [Title] : <input type="text" name='title' value="{{blog.title}}">
+                [Title] : <input type="text" name='title' value="{{team.title2}}">
                 <br>
                 <br>
-                [Wirter] : <input type="text" name='writer' value="{{blog.writer}}">
+                [Wirter] : <input type="text" name='writer' value="{{team.writer2}}">
                 <br>
                 <br>
                 [Body]
                 <br>
                 <textarea name="body" id="" cols="30" rows="10"
-                        placeholder="write your content"style="padding:10px; margin:10px;" >{{blog.body}}</textarea>
+                        placeholder="write your content"style="padding:10px; margin:10px;" >{{team.body2}}</textarea>
                 <br>
                 <br>
                 <button type='submit'>수정하기</button>
