--- a/app_festa/templates/festa_home/new.html
+++ b/app_festa/templates/festa_home/new.html
@@ -6,51 +6,95 @@
 
 <body>
  -->
- {% block content %}
+{% block content %}
+<div class="container">
+    <h2>페스타 등록하기</h2>
+    <br>
     <div class="container">
-        <h2>페스타 등록하기</h2>
-        <br>
-        <div class="container">
-            <form action="{% url 'create' %}" method="POST" enctype="multipart/form-data">
-                {% csrf_token %}
-                <p>공연 제목</p>
-                <input type="text" name="name">
-                <p>공연 날짜</p>
-                <input type="date" name="schedule">
-                <p>공연 장소</p>
-                <input type="text" name="space">
-                <p>공식 티켓판매처 링크</p>
-                <input type="text" name="purchase_link">
-                <p>공연 주최/기획사</p>
-                <input type="text" name="host">
-                <p>고객 문의처</p>
-                <input type="text" name="contact">
-                <p>지도</p>
-                <div id="map"></div>
-                <script>
-                var mapOptions = {
-                    center: new naver.maps.LatLng(37.3595704, 127.105399),
-                    zoom: 10
-                };
-                var map = new naver.maps.Map('map', mapOptions);
-                </script>  
-                <p>유의사항 게시글로 작성됩니다</p>
-                <textarea name="precautions" cols=70 rows=10></textarea>
-                <p>공지사항 게시글로 작성됩니다</p>
-                <textarea name="notice" cols=70 rows=10></textarea>
-                <br>
-                <p>이미지 첨부 이미지 내 공연 소개, 공연 출연진, 타임 테이블 정보 필수</p>
-                <input type="file" name="poster" vlaue="찾아보기">
-                <input class="btn btn-dark" type="submit" value="제출하기">
-            </form>
-        </div>
+        <form action="{% url 'create' %}" method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            <p>공연 제목</p>
+            <input type="text" name="name">
+            <p>공연 날짜</p>
+            <input type="date" name="schedule">
+            <p>공연 장소</p>
+            <input type="text" name="space">
+            <p>공식 티켓판매처 링크</p>
+            <input type="text" name="purchase_link">
+            <p>공연 주최/기획사</p>
+            <input type="text" name="host">
+            <p>고객 문의처</p>
+            <input type="text" name="contact">
+            <p>지도</p>
+            <input type="text" value="map" id="sample5_address" placeholder="주소">
+            <input type="button" onclick="sample5_execDaumPostcode()" value="주소 검색"><br>
+            <div id="map" style="width:300px;height:300px;margin-top:10px;"></div>
+            
+            <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
+            <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3a6997107b687683607fb8587b9bb914&libraries=services"></script>
+            <script>
+                var mapContainer = document.getElementById('map'), // 지도를 표시할 div
+                    mapOption = {
+                        center: new daum.maps.LatLng(37.537187, 127.005476), // 지도의 중심좌표
+                        level: 5 // 지도의 확대 레벨
+                    };
+            
+                //지도를 미리 생성
+                var map = new daum.maps.Map(mapContainer, mapOption);
+                //주소-좌표 변환 객체를 생성
+                var geocoder = new daum.maps.services.Geocoder();
+                //마커를 미리 생성
+                var marker = new daum.maps.Marker({
+                    position: new daum.maps.LatLng(37.537187, 127.005476),
+                    map: map
+                });
+            
+                function sample5_execDaumPostcode() {
+                    new daum.Postcode({
+                        oncomplete: function(data) {
+                            var addr = data.address; // 최종 주소 변수
+            
+                            // 주소 정보를 해당 필드에 넣는다.
+                            document.getElementById("sample5_address").value = addr;
+                            // 주소로 상세 정보를 검색
+                            geocoder.addressSearch(data.address, function(results, status) {
+                                // 정상적으로 검색이 완료됐으면
+                                if (status === daum.maps.services.Status.OK) {
+            
+                                    var result = results[0]; //첫번째 결과의 값을 활용
+            
+                                    // 해당 주소에 대한 좌표를 받아서
+                                    var coords = new daum.maps.LatLng(result.y, result.x);
+                                    // 지도를 보여준다.
+                                    mapContainer.style.display = "block";
+                                    map.relayout();
+                                    // 지도 중심을 변경한다.
+                                    map.setCenter(coords);
+                                    // 마커를 결과값으로 받은 위치로 옮긴다.
+                                    marker.setPosition(coords)
+                                }
+                            });
+                        }
+                    }).open();
+                }
+            </script>
+            <p>유의사항 게시글로 작성됩니다</p>
+            <textarea name="precautions" cols=70 rows=10></textarea>
+            <p>공지사항 게시글로 작성됩니다</p>
+            <textarea name="notice" cols=70 rows=10></textarea>
+            <br>
+            <p>이미지 첨부 이미지 내 공연 소개, 공연 출연진, 타임 테이블 정보 필수</p>
+            <input type="file" name="poster" vlaue="찾아보기">
+            <input class="btn btn-dark" type="submit" value="제출하기">
+        </form>
     </div>
+</div>
 </body>
 
 <style>
-#map {
-    width: 400px;
-    height: 300px;
-}
+    #map {
+        width: 400px;
+        height: 300px;
+    }
 </style>
 {% endblock %}
