--- a/app_festa/templates/festa_ready/detail.html
+++ b/app_festa/templates/festa_ready/detail.html
@@ -15,6 +15,18 @@
     <p>공식 티켓판매처 링크 : {{festa.purchase_link}}</p>
     <p>공연 주최/기획사 : {{festa.host }}</p>
     <p>고객 문의처 : {{festa.contact }}</p>
+    <!-- <p>지도 : {{festa.map }}</p>
+    <div id="map" style="width:300px;height:300px;margin-top:10px;"></div>
+            
+    <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
+    <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3a6997107b687683607fb8587b9bb914&libraries=services"></script>
+    <script>
+        var mapContainer = document.getElementById('map'), // 지도를 표시할 div
+            mapOption = {
+                center: new daum.maps.LatLng(37.537187, 127.005476), // 지도의 중심좌표
+                level: 5 // 지도의 확대 레벨
+            };
+    </script> -->
     <p>공연 유의사항 : {{ festa.precautions }}</p>
     <p>공연 공지사항 : {{ festa.notice }}</p>
 
