festa_ready comment

--- a/app_festa/templates/festa_ready/detail_accompany.html
+++ b/app_festa/templates/festa_ready/detail_accompany.html
@@ -10,3 +10,18 @@
     {% csrf_token%}
     <input type="submit" value="삭제" class="btn btn-primary">
 </form>
+
+<h2>comments</h2>
+{% for comment in comments %}
+<p>작성자: {{comment.writer_accompany}}</p>
+<p>내용: {{comment.content_accompany}}</p>
+<hr>
+{% endfor%}
+
+<form action="{% url 'comment_accompany' accompany.id %}" method="POST">
+    {% csrf_token %}
+    작성자 : <input name="writer" type="text">
+    <br>
+    내용 : <textarea name="content" id="" cols="30" rows="10"></textarea>
+    <input type="submit">
+</form>
