--- a/app_festa/templates/festa_home/new.html
+++ b/app_festa/templates/festa_home/new.html
@@ -26,7 +26,7 @@
             <p>고객 문의처</p>
             <input type="text" name="contact">
             <p>지도</p>
-            <input type="text" value="map" id="sample5_address" placeholder="주소">
+            <input type="text" id="sample5_address" placeholder="공연장소를 입력하세요">
             <input type="button" onclick="sample5_execDaumPostcode()" value="주소 검색"><br>
             <div id="map" style="width:300px;height:300px;margin-top:10px;"></div>
             
