--- a/app_festa/templates/festa_home/success_create.html
+++ b/app_festa/templates/festa_home/success_create.html
@@ -15,7 +15,7 @@
             <h3>등록이 완료되었습니다.</h3>
             <p>승인 완료까지 약 3일이 소요됩니다.</p>
             <br>
-            <p>등록 코드:</p>
+            <p>등록 코드:{{number}}</p>
             <a href="{% url 'home' %}">홈으로</a>
         </div>
     </div>
