--- a/app_festaNow/templates/festa_now/detail.html
+++ b/app_festaNow/templates/festa_now/detail.html
@@ -15,10 +15,10 @@
         </div>
 
         <div class="col-md-7" style="background-color:#EEE9F7; ">
-            <a class="btn btn-primary" href="{% url 'now_staff' %}">Staff</a>
+            <a class="btn btn-primary" href="{% url 'staff_login' %}">Staff</a>
             <br>
             <Br>
-            <a class="btn btn-primary" href="{% url 'now_audience' %}">Audience</a>
+            <a class="btn btn-primary" href="{% url 'audience_login' %}">Audience</a>
     </div>
 
  
