--- a/app_festaNow/templates/festa_now/staff/login.html
+++ b/app_festaNow/templates/festa_now/staff/login.html
@@ -16,14 +16,14 @@
 
         <div class="col-md-7" style="background-color:#EEE9F7; ">
             <div class="container">
-                <form action="{% url 'confirm_now' %}" method="POST">
+                <form action="{% url 'confirm_now2' %}" method="POST">
                     {% csrf_token %}
                     <p>정보를 입력해주세요</p>
                     <input class="btn btn-primary " type="submit" value="확인">
                     <br>
                     <br>
-                    <p>예약자 <input type="text" name="reservation_name"></p>
-                    <p>예약번호 <input type="text" name="reservation_num"></p>
+                    <p>이름 <input type="text" name="reservation_name"></p>
+                    <p>팀번호 <input type="text" name="reservation_num"></p>
                 </form>
             </div>
     </div>
