--- a/app_festaNow/templates/festa_now/staff/team.html
+++ b/app_festaNow/templates/festa_now/staff/team.html
@@ -17,7 +17,7 @@
                 
                 <li><a href="{% url 'now_team' %}">팀별게시판</a></li>
                 
-                <li><a href="">지도</a></li>
+                <li><a href="{% url 'staff_map' %}">지도</a></li>
                 
                 <li><a href="">찾아가라</a></li>
 
