--- a/app_festaNow/templates/festa_now/audience/audience.html
+++ b/app_festaNow/templates/festa_now/audience/audience.html
@@ -13,11 +13,11 @@
             <img src = http://www.kpenews.com/Files/4/News/201906/260_20190620191955168.JPG style="height:500px">
             <ul>
 
-                <li><a href="">공지사항</a></li>
+                <li><a href="{% url 'now_audience' %}">공지사항</a></li>
                 
                 <li><a href="{% url 'now_now' %}">Festa now</a></li>
                 
-                <li><a href="">지도</a></li>
+                <li><a href="{% url 'audience_map' %}">지도</a></li>
                 
                 <li><a href="">찾아가라</a></li>
 
