--- a/app_festaReady/templates/festa_ready/create_accompany.html
+++ b/app_festaReady/templates/festa_ready/create_accompany.html
@@ -1,18 +1,24 @@
 
 
-<form action=" {% url 'create_accompany' %}" method="POST">
+<form action=" {% url 'create_accompany' %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <label>제목</label><br>
         <input type="text" name="title"><br>
     
         <label>작성자</label><br>
         <input type="text" name="writer"><br>
+
+        <label>비밀번호</label><br>
+        <input type="password" name="password"><br>
     
         <label>지역</label><br>
         <input type="text" name="area"><br>
     
         <label>내용</label><br>
         <textarea name="description"></textarea><br>
+
+        <label>이미지</label>
+        <input type="file" name="image"><br>
     
         <input type="submit" class="btn btn-primary" value="등록">
     </form>
