--- a/app_festaReady/templates/festa_ready/detail.html
+++ b/app_festaReady/templates/festa_ready/detail.html
@@ -30,8 +30,7 @@
     <p>공연 유의사항 : {{ festa.precautions }}</p>
     <p>공연 공지사항 : {{ festa.notice }}</p>
 
-    <a href="{% url 'accompany' festa.id %}">동행구하기 게시판</a><br>
-    <a href="{% url 'ticket' festa.id %}">티켓 양도/교환 게시판</a><br>
+    <a href="{% url 'accompany' festa.id %}">동행구하기 및 티켓 양도 게시판</a><br>
     <img src="{{ festa.poster.url }}">
     <br>
     <a href="{% url 'home' %}">목록 보러가기</a>
