--- a/app_festaReady/templates/festa_ready/detail_ticket.html
+++ b/app_festaReady/templates/festa_ready/detail_ticket.html
@@ -3,6 +3,9 @@
 <p> 거래타입: {{ticket.deal_type}}</p>
 <p> 작성자: {{ticket.writer}}</p>
 <p> 내용: {{ticket.description}}</p>
+{% if ticket.image %}
+<img src="{{ ticket.image.url }}">
+{% endif %}
 
 <a href="{% url 'edit_ticket' ticket.pk %}" class="btn btn-primary">수정</a>
 
