--- a/app_festaReady/templates/festa_ready/edit_accompany.html
+++ b/app_festaReady/templates/festa_ready/edit_accompany.html
@@ -7,6 +7,9 @@
     
         <label>작성자</label><br>
         <input type="text" name="writer" value="{{ accompany.writer }}"><br>
+
+        <label>비밀번호</label><br>
+        <input type="password" name="password"><br>
     
         <label>지역</label><br>
         <input type="text" name="area" value="{{ accompany.area }}"><br>
