--- a/app_festaReady/templates/festa_ready/edit_ticket.html
+++ b/app_festaReady/templates/festa_ready/edit_ticket.html
@@ -6,6 +6,9 @@
     
         <label>작성자</label><br>
         <input type="text" name="writer" value="{{ ticket.writer }}"><br>
+
+        <label>비밀번호</label><br>
+        <input type="password" name="password"><br>
     
         <label>지역</label><br>
         <input type="text" name="deal_type" value="{{ ticket.deal_type }}"><br>
