--- a/app_festaReady/templates/festa_ready/list_ticket.html
+++ b/app_festaReady/templates/festa_ready/list_ticket.html
@@ -1,11 +1,42 @@
-<h1>list</h1>
-{{all_tickets}}
+{% extends 'base.html' %}
+<!-- 
+[base.html]
+<head>
+</head>
 
-{% for item in tickets.all %}
-<p> 제목: {{item.title}}</p>
-<p> 지역: {{item.deal_type}}</p>
-<p> 작성자: {{item.writer}}</p>
-<a href="{% url 'detail_ticket' item.pk%}" class="btn btn-primary">보러가기</a>
-<p>-------------------------</p>
+<body>
+ -->
+ {% block content %}
+ 
+    <div class="row">
+        <div class="col-md-5">
+            <img src = http://www.kpenews.com/Files/4/News/201906/260_20190620191955168.JPG style="height:500px">
+            <ul class="vertical-menu">
 
-{% endfor %}
+                <li><a href="#">공연정보</a></li>
+                
+                <li><a href="{% url 'list_accompany' %}">동행구하기</a></li>
+                
+                <li><a href="{% url 'list_ticket' %}">티켓 양도/교환</a></li>
+
+            </ul>
+    </div>
+
+    <div class="col-md-7" style="background-color:#EEE9F7; ">
+
+
+        {{all_tickets}}
+
+        {% for item in tickets.all %}
+        <p> 제목: {{item.title}}</p>
+        <p> 지역: {{item.deal_type}}</p>
+        <p> 작성자: {{item.writer}}</p>
+        <a href="{% url 'detail_ticket' item.pk%}" class="btn btn-primary">보러가기</a>
+        <p>-------------------------</p>
+
+        {% endfor %}
+
+    </div>
+
+
+{% endblock %}
