festa_now login url, views 수정중

--- a/app_festaNow/templates/festa_now/audience/login.html
+++ b/app_festaNow/templates/festa_now/audience/login.html
@@ -10,7 +10,7 @@
  
     <div class="row">
         <div class="col-md-5">
-            <img src = http://www.kpenews.com/Files/4/News/201906/260_20190620191955168.JPG style="height:500px">
+            <img src ="{{festa.poster.url}}"style="height:500px">
 
         </div>
 
