--- a/app_festa/templates/festa_home/staff_notice.html
+++ b/app_festa/templates/festa_home/staff_notice.html
@@ -1,3 +1,13 @@
+{% extends 'base.html' %}
+<!-- 
+[base.html]
+<head>
+</head>
+
+<body>
+ -->
+ {% block content %}
+
 <h1>Staff 공지사항</h1>
 <a href="{% url 'staff_new'%}">글쓰기 </a>
 
@@ -14,4 +24,8 @@
 <div class="middle">
     <hr>
 
-    
+    {% endfor %}
+       
+
+
+{% endblock %}
